--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ uart_16550 = "0.2.18"
 pic8259 = "0.10.4"
 pc-keyboard = "0.5.0"
 linked_list_allocator = "0.9.0"
+vga = "0.2.8"
 
 [dependencies.lazy_static]
 version = "1.4"
